fix(editor): give split separator a high z-index
This prevents it from being behind the boardviewer when the boardviewer
is at size 0. Possibly a Chrome bug.

Closes #78

--- a/src/client/app/pages/editor/editor.component.scss
+++ b/src/client/app/pages/editor/editor.component.scss
@@ -179,6 +179,7 @@
     /deep/ vertical-split-separator, /deep/ horizontal-split-separator {
         border: none;
         background-color: $navbar-bg-color;
+        z-index: 9999;
 
         .handle {
             background-color: darken($accent-color, 10%);
